--- a/css/style.css
+++ b/css/style.css
@@ -10,11 +10,13 @@
 header{
     background-color: #272323;
     height: 130px;
+    width: auto;
 }
 
 footer{
     background-color: #272323;
-    height: 81px;
+    height: 200px;
+    width: auto;
 }
 
 .container-grid{
@@ -23,14 +25,12 @@ footer{
     margin: auto;
     display: flex;
     align-items: center;
+    justify-content: space-between;
 }
 
 .menu{
-    position: relative;
-    left: 50px;
     width: 700px;
-    display: flex;
-    justify-content: space-between;
+    padding: 50px;
 }
 
 .menu a{
@@ -39,6 +39,28 @@ footer{
     text-transform: uppercase;
     font-family: 'Open Sans', sans-serif;
     font-size: 25px;
+    padding: 15px;
+}
+
+.menu-entrar{
+    width: 120px;
+    background-color: orange;
+    border-radius: 15px;
+    margin-right: 110px;
+}
+
+.menu-entrar a{
+    color: white;
+    text-decoration: none;
+    text-transform: uppercase;
+    font-family: 'Open Sans', sans-serif;
+    font-size: 25px;
+    margin-left: 9px;
+}
+
+.barras{
+    width: 100px;
+    display: none;
 }
 
 .banner{
@@ -48,11 +70,8 @@ footer{
 }
 
 .banner img{
-    position: relative;
-    top: 8px;
-    left: 350px;
-    margin: auto;
-    justify-content: space-between;
+    width: 600px;
+    margin-top: 13px;
 }
 
 .noticias{
@@ -61,29 +80,24 @@ footer{
     background-color: #DFDADA;
 }
 
-.texto-news-noticias h1{
-    left: 350px;
-    color: black;
-    font-size: 40px;
-    font-family: 'Rationale', sans-serif;
-    position: relative;
+.noticia-banner img{
+    margin-top: 70px;    
 }
 
 .texto-vermais-noticias a{
-    top: 700px;
-    right: 300px;
     color: black;
     font-size: 30px;
     font-family: 'Rationale', sans-serif;
     text-decoration: underline;
     display: flex;
     justify-content: flex-end;
-    position: relative;
+    margin-right: 87px;
+    margin-top: 40px;
 }
 
 .footer-menu{
-    position: relative;
     width: 825px;
+    height: 100px;
     display: flex;
     justify-content: space-between;
 }
@@ -95,11 +109,167 @@ footer{
     font-size: 25px;
 }
 
+.footer-suporte-email{
+    height: 100px;
+    width: 300px;
+}
+
+.footer-suporte-email h2{
+    color: white;
+    font-size: 20px;
+    display: flex;
+    justify-content: flex-end;
+}
+
+.footer-suporte-email form{
+    display: flex;
+    justify-content: flex-end;
+    margin-right: 27px;
+}
+
+.footer-suporte-email input[type="email"]{
+    font-weight: bold;
+}
+
+.footer-suporte-email button{
+    margin-left: 10px;
+    background-color: orange;
+    border: none;
+    border-radius: 7px;
+    color: black;
+    width: 100px;
+}
+
 .noticia-banner img{
-    position: relative;
-    top: 30px;
-    left: 385px;
     width: 400px;
     height: 550px;
     justify-content: space-between;
+}
+
+@media screen and (max-width:1400px){
+    .banner-opicional{
+        display: none;        
+    }
+    .main-banner{
+        margin-left: 250px;
+    }
+    .noticia-banner img{
+        margin-left: 100px;
+    }
+    .noticia3-banner{
+        display: none;
+    }
+    .texto-vermais-noticias a{
+        margin-right: 50px;
+    }
+    .menu-entrar a{
+        margin-left: 14px;
+        font-size: 20px;
+    }
+    .menu-entrar{
+        margin-right: 200px;
+        width: 100px;
+    }
+    .menu{
+        width: 610px;
+    }
+    .menu a{
+        font-size: 20px;
+    }
+}
+
+@media screen and (max-width:1200px){
+    .banner-opicional{
+        display: none;        
+    }
+    .main-banner{
+        position: relative;
+        right: 65px;
+    }
+    .noticia-banner img{
+        position: relative;
+        left: 170px;
+    }
+    .noticia2-banner{
+        display: none;
+    }
+    .noticia3-banner{
+        display: none;
+    }
+    .menu{
+        width: 570px;
+    }
+    .menu a{
+        font-size: 16px;
+        width: 100px;
+    }
+    .menu-entrar a{
+        font-size: 16px;
+        margin-left: 10px;
+    }
+    .menu-entrar{
+        margin-right: 180px;
+        width: 80px;
+    }
+}
+
+@media screen and (max-width:992px){
+    .menu a{
+        font-size: 15px;
+    }
+    .menu{
+        margin-right: 30px;
+        padding: 3px;
+    }
+    .menu-entrar{
+        margin-right: 1px;
+    }
+    .menu-entrar a{
+        font-size: 15px;
+        margin-left: 5px;
+    }
+    .main-banner{
+        position: relative;
+        right: 185px;
+    }
+    .noticia-banner{
+        position: relative;
+        right: 120px;
+    }
+    .footer-menu a{
+        font-size: 20px;
+    }
+}
+
+@media screen and (max-width:768px){
+    .barras{
+        display: inline-block;
+    }
+    .menu{
+        display: none;
+        flex-direction: column;
+        width: 550px;
+        height: 550px;
+        background-color: black;
+    }
+    .menu-entrar a{
+        display: none;
+    }
+    .banner-opicional{
+        display: none;        
+    }
+    .main-banner{
+        right: 285px;
+    }
+    .noticia-banner{
+        right: 200px;
+    }
+    .texto-vermais-noticias{
+        position: relative;
+        left: 80px;
+    }
+    .footer-menu a{
+        width: 10px;
+        padding: 1em;
+    }
 }
