--- a/css/style.css
+++ b/css/style.css
@@ -72,6 +72,7 @@ footer{
 .banner img{
     width: 600px;
     margin-top: 13px;
+    margin-left: 30px;
 }
 
 .noticias{
@@ -80,8 +81,22 @@ footer{
     background-color: #DFDADA;
 }
 
-.noticia-banner img{
-    margin-top: 70px;    
+.espaco-noticia-banner{
+    align-items: center;
+    display: flex;
+    justify-content: space-between;
+}
+
+.card-noticias{
+    width: 300px;
+    height: 400px;
+    align-items: center;
+    margin-top: 150px;
+}
+
+.card-noticias img{
+    width: 300px;
+    height: 200px;
 }
 
 .texto-vermais-noticias a{
@@ -91,8 +106,7 @@ footer{
     text-decoration: underline;
     display: flex;
     justify-content: flex-end;
-    margin-right: 87px;
-    margin-top: 40px;
+    margin-top: 110px;
 }
 
 .footer-menu{
@@ -118,12 +132,10 @@ footer{
     color: white;
     font-size: 20px;
     display: flex;
-    justify-content: flex-end;
 }
 
 .footer-suporte-email form{
     display: flex;
-    justify-content: flex-end;
     margin-right: 27px;
 }
 
@@ -146,18 +158,20 @@ footer{
     justify-content: space-between;
 }
 
+.footer-suporte-email form, h2{
+    display: flex;
+    justify-content: center;
+}
+
 @media screen and (max-width:1400px){
     .banner-opicional{
         display: none;        
     }
-    .main-banner{
-        margin-left: 250px;
+    .banner-img img{
+        margin-left: 350px;
     }
     .noticia-banner img{
         margin-left: 100px;
-    }
-    .noticia3-banner{
-        display: none;
     }
     .texto-vermais-noticias a{
         margin-right: 50px;
@@ -182,19 +196,33 @@ footer{
     .banner-opicional{
         display: none;        
     }
-    .main-banner{
-        position: relative;
-        right: 65px;
+    .menu{
+        width: 570px;
+    }
+    .menu a{
+        font-size: 16px;
+        width: 100px;
+    }
+    .menu-entrar a{
+        font-size: 16px;
+        margin-left: 10px;
+    }
+    .menu-entrar{
+        margin-right: 180px;
+        width: 80px;
+    }
+}
+
+@media screen and (max-width:1199px){
+    .banner-opicional{
+        display: none;        
+    }
+    .banner-img img{
+        margin-left: 200px;
     }
     .noticia-banner img{
         position: relative;
         left: 170px;
-    }
-    .noticia2-banner{
-        display: none;
-    }
-    .noticia3-banner{
-        display: none;
     }
     .menu{
         width: 570px;
@@ -218,26 +246,58 @@ footer{
         font-size: 15px;
     }
     .menu{
+        width: 450px;
         margin-right: 30px;
         padding: 3px;
     }
     .menu-entrar{
-        margin-right: 1px;
+        margin-right: 100px;
     }
     .menu-entrar a{
         font-size: 15px;
-        margin-left: 5px;
-    }
-    .main-banner{
-        position: relative;
-        right: 185px;
-    }
-    .noticia-banner{
-        position: relative;
-        right: 120px;
+        margin-left: 10px;
     }
     .footer-menu a{
         font-size: 20px;
+    }
+    .banner-img img{
+        margin-left: 180px;
+    }
+}
+
+@media screen and (max-width:991px){
+    .menu a{
+        font-size: 15px;
+    }
+    .menu{
+        width: 450px;
+        margin-right: 30px;
+        padding: 3px;
+    }
+    .menu-entrar{
+        margin-right: 10px;
+    }
+    .menu-entrar a{
+        font-size: 15px;
+        margin-left: 10px;
+    }
+    .footer-menu a{
+        font-size: 20px;
+    }
+    .banner-img img{
+        margin-left: 50px;
+    }
+    .card-noticias{
+        margin-left: 30px;
+    }
+    .noticia3-banner{
+        display: none;
+    }
+    .noticia3-h5{
+        display: none;
+    }
+    .noticia3-p{
+        display: none;
     }
 }
 
@@ -255,21 +315,49 @@ footer{
     .menu-entrar a{
         display: none;
     }
-    .banner-opicional{
-        display: none;        
+    .footer-menu{
+        height: 50px;
     }
-    .main-banner{
-        right: 285px;
+    footer{
+        height: 160px;
     }
-    .noticia-banner{
-        right: 200px;
+}
+
+@media screen and (max-width:767px){
+    .barras{
+        display: inline-block;
     }
-    .texto-vermais-noticias{
-        position: relative;
-        left: 80px;
+    .menu{
+        display: none;
+        flex-direction: column;
+        width: 550px;
+        height: 550px;
+        background-color: black;
     }
-    .footer-menu a{
-        width: 10px;
-        padding: 1em;
+    .menu-entrar a{
+        display: none;
+    }
+    .footer-menu{
+        height: 50px;
+    }
+    footer{
+        height: 160px;
+    }
+    .banner-img img{
+        width: 500px;
+        margin-left: 20px;
+    }
+    .noticias{
+        height: 1500px;
+    }
+    .espaco-noticia-banner{
+        display: block;
+        height: 1200px;
+    }
+    .card-noticias{
+        margin-left: 100px;
+    }
+    .texto-vermais-noticias a{
+        margin-top: 0px;
     }
 }
