--- a/css/style.css
+++ b/css/style.css
@@ -171,6 +171,57 @@ li{
     position: relative;
 }
 
+.login-background{
+    padding-top: 5vh;
+    width: auto;
+    height: 639px;
+    background-color: #DFDADA;
+}
+
+.login-background input, label{
+    display: block;
+    width: 100%;
+}
+
+.login-container{
+    width: 600px;
+    margin-left: auto;
+    margin-right: auto;
+    background-color: white;
+    border-radius: 10px;
+    padding: 20px;
+}
+
+label{
+    font-weight: bold;
+}
+
+input{
+    padding: 10px;
+}
+
+input:focus{
+    outline: none;
+    border-color: tomato;
+}
+
+input[type="submit"]{
+    background-color: orange;
+    border: none;
+    border-radius: 20px;
+    cursor: pointer;
+}
+
+#agreement{
+    margin-right: 5px;
+}
+
+#agreement, #agreement-label{
+    padding: 10px;
+    display: inline-block;
+    width: auto;
+}
+
 @media screen and (max-width:1400px){
     .banner-opicional{
         display: none;        
