--- a/css/style.css
+++ b/css/style.css
@@ -171,19 +171,19 @@ li{
     position: relative;
 }
 
-.login-background{
+.registro-background{
     padding-top: 5vh;
     width: auto;
     height: 639px;
     background-color: #DFDADA;
 }
 
-.login-background input, label{
+.registro-background input, label{
     display: block;
     width: 100%;
 }
 
-.login-container{
+.registro-container{
     width: 600px;
     margin-left: auto;
     margin-right: auto;
@@ -211,6 +211,7 @@ input[type="submit"]{
     border: none;
     border-radius: 20px;
     cursor: pointer;
+    box-shadow: 10px 10px #e7e9eb;
 }
 
 #agreement{
@@ -221,6 +222,57 @@ input[type="submit"]{
     padding: 10px;
     display: inline-block;
     width: auto;
+}
+
+.login-background{
+    padding-top: 5vh;
+    width: auto;
+    height: 639px;
+    background-color: #DFDADA;
+}
+
+.login-background input, label{
+    display: block;
+    width: 100%;
+}
+
+.login-container{
+    width: 600px;
+    margin-left: auto;
+    margin-right: auto;
+    background-color: white;
+    border-radius: 10px;
+    padding: 20px;
+    box-shadow: 10px 10px #e7e9eb;
+}
+
+#confirmacao-login{
+    margin-top: 10px;
+}
+
+.novo-registro{
+    text-align: center;
+    padding-top: 3vh;
+}
+
+.botao-registro{
+    width: auto;
+    background-color: orange;
+    border: none;
+    border-radius: 20px;
+    cursor: pointer;
+    text-decoration: none;
+    color: black;
+    text-align: center;
+}
+
+.login-background a{
+    padding: 8px;
+    display: block;
+    width: 100%;
+    height: 40px;
+    box-shadow: #272323;
+    box-shadow: 10px 10px #e7e9eb;
 }
 
 @media screen and (max-width:1400px){
